--- a/app/src/main/res/layout/activity_onboard1.xml
+++ b/app/src/main/res/layout/activity_onboard1.xml
@@ -10,13 +10,15 @@
 
     <ImageView
         android:id="@+id/imageView2"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
         app:srcCompat="@drawable/spring_og"
         app:layout_constraintTop_toTopOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintBottom_toTopOf="@+id/cardView" />
+        app:layout_constraintBottom_toTopOf="@+id/cardView"
+        android:scaleType="centerCrop"
+        />
 
     <androidx.cardview.widget.CardView
         android:id="@+id/cardView"
