--- a/app/src/main/res/layout/item_contact.xml
+++ b/app/src/main/res/layout/item_contact.xml
@@ -1,38 +1,48 @@
+<?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    android:layout_width="wrap_content"
-    android:layout_height="wrap_content"
     xmlns:app="http://schemas.android.com/apk/res-auto"
-    android:orientation="vertical"
-    android:padding="8dp"
-    android:gravity="center"
-    android:layout_marginTop="50dp"
-    android:layout_marginLeft="15dp"
-    android:layout_marginRight="15dp">
+    android:layout_width="match_parent"
+    android:layout_height="wrap_content"
+    android:orientation="horizontal"
+    android:padding="12dp"
+    android:background="@drawable/edittextbg"
+    android:gravity="center_vertical"
+    >
 
+    <!-- Contact Image -->
     <com.google.android.material.imageview.ShapeableImageView
         android:id="@+id/contactImage"
-        android:layout_width="56dp"
-        android:layout_height="56dp"
+        android:layout_width="60dp"
+        android:layout_height="60dp"
         android:src="@drawable/profile"
         android:scaleType="centerCrop"
         app:shapeAppearanceOverlay="@style/RoundedImageView"
-        android:contentDescription="Contact Image"/>
+        android:contentDescription="Contact Image" />
 
+    <!-- Contact Info (Name and Number) -->
+    <LinearLayout
+        android:layout_width="0dp"
+        android:layout_height="wrap_content"
+        android:layout_weight="1"
+        android:orientation="vertical"
+        android:layout_marginStart="12dp">
 
-    <TextView
-        android:id="@+id/contactName"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:text="Contact Name"
-        android:textSize="14sp"
-        android:textAlignment="center"
-        android:layout_marginTop="4dp" />
-    <TextView
-        android:id="@+id/contactNum"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:text="Contact Name"
-        android:textSize="14sp"
-        android:textAlignment="center"
-        android:layout_marginTop="4dp" />
+        <TextView
+            android:id="@+id/contactName"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="Contact Name"
+            android:textSize="16sp"
+            android:textColor="@color/black"
+            android:textStyle="bold" />
+
+        <TextView
+            android:id="@+id/contactNum"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="Contact Number"
+            android:textSize="14sp"
+
+            android:layout_marginTop="2dp" />
+    </LinearLayout>
 </LinearLayout>
