--- a/app/src/main/res/layout/activity_code.xml
+++ b/app/src/main/res/layout/activity_code.xml
@@ -32,7 +32,8 @@
         app:layout_constraintBottom_toTopOf="@+id/codeInputLayout"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/codeHelperTitle" />
+        app:layout_constraintTop_toBottomOf="@+id/codeHelperTitle"
+        tools:listitem="@layout/item_bot_message"/>
 
     <LinearLayout
         android:id="@+id/codeInputLayout"
