--- a/app/src/main/res/layout/activity_main_dashboard.xml
+++ b/app/src/main/res/layout/activity_main_dashboard.xml
@@ -5,15 +5,10 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:orientation="vertical"
+    android:paddingHorizontal="16dp"
     tools:context=".main_dashboard">
 
-    <LinearLayout
-        android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:orientation="vertical"
-        android:paddingHorizontal="16dp"
-        android:layout_weight="1">
-
+    <!-- Welcome Text -->
     <TextView
         android:id="@+id/welcomeText"
         android:layout_width="wrap_content"
@@ -25,15 +20,40 @@
         android:textStyle="bold"
         android:paddingBottom="8dp" />
 
+    <!-- Username Display -->
     <TextView
         android:id="@+id/usernameText"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginTop="20dp"
+        android:layout_marginTop="10dp"
         android:text="User Name"
         android:textSize="18sp"
         android:paddingBottom="16dp" />
 
+
+
+
+    <TextView
+        android:id="@+id/contactview"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginTop="10dp"
+        android:text="My Contacts"
+        android:textSize="18sp"
+        android:paddingBottom="16dp" />
+
+    <EditText
+        android:id="@+id/searchContact"
+        android:layout_width="379dp"
+        android:layout_height="wrap_content"
+        android:background="@android:drawable/editbox_background"
+        android:drawableLeft="@drawable/search"
+        android:elevation="2dp"
+        android:hint="Search Contact"
+        android:padding="12dp"
+        android:textColor="@android:color/black"
+        android:textColorHint="@android:color/darker_gray" />
+    <!-- Contact List RecyclerView -->
     <androidx.recyclerview.widget.RecyclerView
         android:id="@+id/recycleContactList"
         android:layout_width="match_parent"
@@ -41,18 +61,17 @@
         android:layout_weight="1"
         android:paddingBottom="16dp" />
 
+    <!-- Create New Contact Button -->
     <Button
         android:id="@+id/createContactBtn"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_gravity="center"
         android:backgroundTint="@color/mild_green"
-        android:paddingBottom="16dp"
         android:text="Create New Contact"
-        />
+        android:layout_marginBottom="16dp" />
 
-    </LinearLayout>
-
+    <!-- Bottom Navigation Bar -->
     <FrameLayout
         android:layout_height="wrap_content"
         android:layout_width="match_parent">
