--- a/app/src/main/res/layout/activity_task_list.xml
+++ b/app/src/main/res/layout/activity_task_list.xml
@@ -1,9 +1,9 @@
 <?xml version="1.0" encoding="utf-8"?>
 <androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
+    xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    xmlns:tools="http://schemas.android.com/tools"
     android:background="@color/white">
 
     <!-- Sticky Header -->
@@ -28,17 +28,27 @@
             android:textStyle="bold" />
     </LinearLayout>
 
+    <!-- Task Visualization Chart -->
+    <com.example.sprintly_app_smd_finale.TaskVisualization
+        android:id="@+id/taskVisualization_"
+        android:layout_width="0dp"
+        android:layout_height="wrap_content"
+    android:layout_marginBottom="16dp"
+    app:layout_constraintTop_toBottomOf="@id/stickyHeader"
+    app:layout_constraintStart_toStartOf="parent"
+    app:layout_constraintEnd_toEndOf="parent" />
+
     <!-- RecyclerView for Task List -->
     <androidx.recyclerview.widget.RecyclerView
         android:id="@+id/rvTasks"
         android:layout_width="0dp"
         android:layout_height="0dp"
         android:padding="8dp"
-        app:layout_constraintTop_toBottomOf="@id/stickyHeader"
+        app:layout_constraintTop_toBottomOf="@id/taskVisualization_"
         app:layout_constraintBottom_toTopOf="@id/bottomNav"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
-        tools:listitem="@layout/task_item_layout"/>
+        tools:listitem="@layout/task_item_layout" />
 
     <!-- Floating Action Button -->
     <com.google.android.material.floatingactionbutton.FloatingActionButton
@@ -62,4 +72,3 @@
     </FrameLayout>
 
 </androidx.constraintlayout.widget.ConstraintLayout>
-
